<resources>
    <string name="app_name">DigiBack</string>
    <string name="navigation_drawer_open">Ouvrir le tiroire de navigation</string>
    <string name="navigation_drawer_close">Fermer l\'onglet de navigation</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Entête de navigation</string>

    <!-- Buttons -->
    <string name="evaluate_mobility">Evaluer ma mobilité</string>
    <string name="add_pain">Ajouter un niveau de douleur</string>

    <!-- Actions -->
    <string name="action_settings">Parametres</string>
    <string name="action_deconnexion">Déconnexion</string>

    <string name="menu_accueil">Accueil</string>
    <string name="text_accueil">Ceci est l\'accueil</string>

    <string name="menu_calendar">Calendrier</string>
    <string name="text_calendar">Voici votre activité</string>

    <string name="menu_tips">Nos conseils</string>
    <string name="text_tips">Voici vos conseils personnalisés</string>

    <string name="menu_exercise" translatable="false">Exercices</string>
    <string name="text_exercise">Voici les exercices</string>

    <string name="menu_quiz" translatable="false">Quiz</string>
    <string name="text_quiz">Voici le quiz pour tester vos connaissances</string>

    <string name="menu_state">Etat du dos</string>
    <string name="text_state">Ouvrir le tiroire de navigation</string>

    <string name="menu_info" translatable="false">Articles</string>
    <string name="text_info">Voici des articles pour approfondir vos connaissances</string>

    <string name="text_deconnexion">Voulez-vous vraiment nous quitter ?</string>
    <string name="text_settings" translatable="true">Que voulez-vous changer ?</string>

    <!-- Login -->
    <string name="text_welcome">Bienvenue sur\nDigiBack</string>
    <string name="get_in_app">Commencer à utiliser l\'application</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email_or_username">Email ou nom d\'utilisateur</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Nom d\'utilisateur</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_register"><u>Créer un compte</u></string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="welcome">Bienvenue !</string>
    <string name="invalid_username">Nom d\'utilisateur non valide</string>
    <string name="invalid_password">Le mot de passe doit faire plus de 5 caractères</string>

    <string name="information_text">Voici une liste d\'article qui peut vous interesser.</string>
    <string name="login_failed">Connection echouée</string>
    <string name="basic_article_txt">Ceci est un article</string>
    <string name="default_day">Vendredi 12 Mars 2021</string>
    <string name="steps_title">Nombre de pas</string>
    <string name="exercise_title">Exercices</string>
    <string name="quiz_title" translatable="false">Quiz</string>

    <string name="pain_0">0 - Aucune douleur</string>
    <string name="pain_1" translatable="false">1</string>
    <string name="pain_2" translatable="false">2</string>
    <string name="pain_3" translatable="false">3</string>
    <string name="pain_4" translatable="false">4</string>
    <string name="pain_5">5 - Modérée</string>
    <string name="pain_6" translatable="false">6</string>
    <string name="pain_7" translatable="false">7</string>
    <string name="pain_8" translatable="false">8</string>
    <string name="pain_9" translatable="false">9</string>
    <string name="pain_10">10 - Pire douleur imaginable</string>

    <!-- Permissions -->
    <string name="permission_group_label" translatable="false">Permission Group Label</string>
    <string name="permission_group_description" translatable="false">Permission Group Description</string>
    <string name="permission_label">Permission Label</string>
    <string name="permission_description">
        récolter, sauvegarder et utiliser des données personnelles vous concernant afin de vous conseiller au mieux?
        Les informations concernées sont les suivantes : nombre de pas que vous faites, niveau de mobilité de votre dos, niveaux de douleurs ressentis.
        Autorisez-vous DigiBack à utiliser ces informations
    </string>
    <string name="movement_text">Mouvement</string>
    <string name="start">Commencer</string>
    <string name="stop">Arrêter</string>
    <string name="help">Aide</string>
    <string name="movement_help">
        Pour évaluer votre mobilité, veuillez suivre les instructions suivantes : \n
         \t 1. \t Choisissez un mouvement dans la liste. \n
         \t 2. \t Cliquez sur le bouton pour commencer la mesure. \n
         \t 3. \t Positionnez votre téléphone à plat et à la vérticale sur votre torse. \n
         \t 4. \t Attendez le premier signal sonore. \n
         \t 5. \t Effectuer le mouvement en gardant le téléphone sur votre torse. Vous avez 5 secondes pour le faire \n
    </string>
    <string name="validate">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="evolutions" translatable="false">Evolutions</string>
    <string name="values">Valeures</string>
    <string name="angles" translatable="false">Angles</string>
    <string name="register_failed">Enregistrement échoué</string>
    <string name="wrong_confirmation_password">Les deux mots de passes entrés sont différents !</string>
    <string name="mark_as_done">Marquer comme fait</string>
    <string name="permission_denied_explenation">Il est, pour l\'instant, impossible d\'utiliser cette application sans autoriser l\'utilisation de données personnellles.</string>
    <string name="radio_maybe_false" >Peut-être faux</string>
    <string name="radio_false" >Faux</string>
    <string name="radio_maybe_true" >Peut-être vrai</string>
    <string name="radio_not_sure" >Je ne suis pas sûr(e)</string>
    <string name="radio_true" >Vrai</string>
    <string name="back_state_help" >Sur cette page vous pouvez suivre l\'état de votre dos. Le graphique ci-dessous montre l\'évolution de la mobilité de votre dos (angles) ainsi que l\'évolution des niveau de douleurs ressentis lors des mouvements. Pour évaluer la mobilité de votre dos aujourd\'hui, cliquez sur le bouton en bas de la page.</string>
    <string name="welcome_start" >Bonjour,</string>
    <string name="welcome_end" >Vous êtes sur la page d\'accueil. Pour aller sur d\'autre pages, veuillez utiliser le bouton menu en haut à gauche de l\'écran. Pour vous déconnecter, cliquez sur les trois petits points en haut à droite, puis sur \"Deconnexion\".</string>
    <string name="text_help" >Tous les cadres comme celui-ci avec l\'intitulé \"Aide\" contiennent des informations sur l\'utilisation de l\'application dans la page où ils se situent.</string>
    <string name="help_quiz" >Pour passer d\'une question à l\'autre, il vous suffit de les glisser sur le côté.</string>
    <string name="right_tilt_help" >Au signal sonore, courbez votre dos aussi bas que possible (sans forcer) sur la droite.</string>
    <string name="left_tilt_help" >Au signal sonore, courbez votre dos aussi bas que possible (sans forcer) sur la gauche.</string>
    <string name="back_tilt_help" >Au signal sonore, courbez votre dos en arrière aussi bas que possible (sans forcer).</string>
    <string name="front_tilt_help" >Au signal sonore, courbez votre dos en avant aussi bas que possible (sans forcer).</string>
    <string name="left_rotation_help" translatable="false">...</string>
    <string name="right_rotation_help" translatable="false">...</string>
    <string name="mark_exercise_as_done_again" >Refaire l\'exercice</string>
    <string name="done" >Fait</string>
    <string name="nbr_times" >fois</string>
    <string name="not_done" >Pas fait</string>
    <string name="score" translatable="false" >Score</string>
    <string name="help_score" >
        Le score vous indique a quel point vous êtes renseigné sur le dos. \n
        Plus le score est haut, plus il y a de croyances négatives sur le dos.
    </string>
    <string name="state_score_text" translatable="false">
        Ce questionnaire évalue certains facteurs de risque de développer des douleurs chroniques.\n
\n
        Il y a 3 catégories : \n
        -\t	Risque faible de chronicité\n
        -\t	Risque moyen de chronicité\n
        -\t	Risque élevé de chronicité\n
    </string>
    <string name="state_small" translatable="false">
        Risque faible
    </string>
    <string name="state_moderate" translatable="false">
        Risque moyen
    </string>
    <string name="state_high" translatable="false">
        Risque élevé
    </string>
    <string name="not_at_all" translatable="false">Pas du tout</string>
    <string name="a_bit" translatable="false">Un peu</string>
    <string name="moderately" translatable="false">Modérément</string>
    <string name="a_lot" translatable="false">"Beaucoup "</string>
    <string name="extremely" translatable="false">Extrêmement</string>


</resources>
