<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/pain_0"
        android:title="@string/pain_0" />
    <item android:id="@+id/pain_1"
        android:title="@string/pain_1" />
    <item android:id="@+id/pain_2"
        android:title="@string/pain_2" />
    <item android:id="@+id/pain_3"
        android:title="@string/pain_3" />
    <item android:id="@+id/pain_4"
        android:title="@string/pain_4" />
    <item android:id="@+id/pain_5"
        android:title="@string/pain_5" />
    <item android:id="@+id/pain_6"
        android:title="@string/pain_6" />
    <item android:id="@+id/pain_7"
        android:title="@string/pain_7" />
    <item android:id="@+id/pain_8"
        android:title="@string/pain_8" />
    <item android:id="@+id/pain_9"
        android:title="@string/pain_9" />
    <item android:id="@+id/pain_10"
        android:title="@string/pain_10" />
</menu>
