<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/score_title"
        style="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorSecondary"
        android:padding="16dp"
        android:text="@string/score"
        android:lineSpacingMultiplier="1.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/score_value"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold"
        android:layout_margin="32dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- HELP -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_help"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardBackgroundColor="@color/colorSecondaryTransparent"
        app:contentPadding="8dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/help_score"
                android:text="@string/help"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_help_quiz_text"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:cardBackgroundColor="@color/white"
                app:contentPadding="4dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/score_text"
                    android:text="@string/help_score"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>