<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.mobility.MobilityActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/movement_selector"
                android:layout_width="403dp"
                android:layout_height="59dp"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/buttons"
                tools:layout_editor_absoluteX="4dp">

                <TextView
                    android:id="@+id/movement_text"
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movement_text"
                    android:textColor="@color/colorPrimary"
                    style="?android:textAppearanceMedium" />

                <Spinner
                    android:id="@+id/movement_spinner"
                    android:layout_margin="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="403dp"
                android:layout_height="59dp"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movement_selector"
                tools:layout_editor_absoluteX="4dp">

                <Button
                    android:id="@+id/start_measure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorSecondary"
                    android:textColor="@color/white"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/start" />

                <TextView
                    android:id="@+id/text_timer"
                    android:layout_width="64dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="0:00"/>
            </LinearLayout>

            <!-- HELP 1 begin -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_movement_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/colorSecondaryTransparent"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                app:contentPadding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/card_view_fact"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/angle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movement_help_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="8dp"
                        android:text="@string/help"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view_movement_help_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="0dp"
                        app:contentPadding="4dp">

                        <TextView
                            android:id="@+id/movement_help_content"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!-- HELP 1 end -->


            <!-- HELP begin -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_fact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/colorSecondaryTransparent"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                app:contentPadding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_movement_help">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/help_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="8dp"
                        android:text="@string/help"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view_help_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="0dp"
                        app:contentPadding="4dp">

                        <TextView
                            android:id="@+id/help_text_content"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/movement_help" />

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!-- HELP end -->
        </LinearLayout>
    </ScrollView>


    <!-- Back Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/colorPrimary"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_back"/>


</androidx.constraintlayout.widget.ConstraintLayout>